# micro-x-agent-loop-python

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD-PROMPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  config-anthropic-eval-0001.json  config-base.json  config-baseline.json  config-eval-opus.json  config-examples.json  config-optimal-anthropic.json  config-standard-cheap.json  config-standard-deepseek.json  config-standard-gemini-flash.json  config-standard-gemini.json  config-standard-gemma-cloud.json  config-standard-groq-scout.json  config-standard-no-summarization-cheap.json  config-standard-no-summarization-openai.json  config-standard-no-summarization-sonnet.json  config-standard-no-summarization.json  config-standard-ollama-gemma2-hybrid.json  config-standard-ollama-gemma2.json  config-standard-ollama-gemma3.json  config-standard-ollama-llama3-hybrid.json  config-standard-ollama-llama3.json  config-standard-ollama-mistral-hybrid.json  config-standard-ollama-mistral.json  config-standard-ollama-phi3-hybrid.json  config-standard-ollama-phi3.json  config-standard-ollama.json  config-standard-openai-no-console.json  config-standard-openai.json  config-standard-sonnet-debug.json  config-standard-sonnet-no-console.json  config-standard-with-tool-summarisation.json  (+18 more)
examples/: sdk_example.py  web-chat.html
mcp_servers/: interview_assist_server.py
memory/: feedback_bash_tool_uses_posix_not_powershell.md
notebooks/: session_cost_explorer.ipynb  test_helpers.py  test_tier1_config_and_logic.ipynb  test_tier2_live_api.ipynb
review/: cost-reduction-review.md  index.md
scripts/: fetch_ripgrep.py
tests/: __init__.py  conftest.py  fakes.py  test_agent_builder.py  test_agent_channel.py  test_alerting.py  test_analyze_costs.py  test_api_payload_store.py  test_app_config.py  test_ask_user.py  test_bootstrap.py  test_command_handler.py  test_command_router.py  test_compaction_and_llm_utils.py  test_compaction_strategy.py  test_cost_reconciliation.py  test_cost_reduction.py  test_cost_rollups.py  test_embedding.py  test_gemini_provider.py  test_gemini_provider_extended.py  test_llm_client.py  test_llm_client_stream.py  test_logging_config.py  test_manifest.py  test_mcp_manager.py  test_mcp_tool_proxy.py  test_metrics.py  test_mode_selector.py  test_native_filesystem_bash.py  test_native_filesystem_memory.py  test_native_filesystem_paths.py  test_native_filesystem_read_tools.py  test_native_filesystem_write_tools.py  test_native_system_info.py  test_observability.py  test_observability_phase1.py  test_online_eval.py  test_openai_provider.py  test_otel_export.py  (+32 more)
tools/: ADAPT-PROMPT.md  generate.py  manifest.json
web/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  (+7 more)
(+817 files in other folders)
