[project]
name = "micro-x-agent-loop"
version = "0.1.0"
description = "A general-purpose, cost-aware AI agent with multi-provider LLM support, MCP tool orchestration, and session persistence"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "loguru>=0.7.0",
    "mcp>=1.0.0",
    "tiktoken>=0.7.0",
    "questionary>=2.0.0",
    "croniter>=1.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
